# processlens

./: .gitignore  README.md
docs/: METHODOLOGY.md  index.html
docs/artifacts/: compliance.json  opportunities.json  segmentation.json  variants.json  worst_cases.json
docs/assets/: index-ccqTFwt9.js  index-t86u-ri_.css  index-yM5lZHa_.js
etl/: etl.py  inspect_schema.py  pyproject.toml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/artifacts/: dfg.json  overview.json  throughput.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: Drawer.tsx  ProcessMap.tsx  ui.tsx
web/src/lib/: data.tsx  fmt.ts
web/src/sections/: Compliance.tsx  Opportunities.tsx  Overview.tsx  Performance.tsx  ProcessFlow.tsx
